spacing fix to footer

--- a/assets/css/nycaasc-custom.css
+++ b/assets/css/nycaasc-custom.css
@@ -183,6 +183,8 @@
   /* Set the fixed height of the footer here
   height: 60px;*/
   background-color: #f5f5f5;
+  border-top-width: 1px;
+  padding-bottom: 20px;
 }
 .footer>div {
   background-color: #f5f5f5;
